--- a/service-shopping-list/contract/service-shopping-list.yaml
+++ b/service-shopping-list/contract/service-shopping-list.yaml
@@ -84,6 +84,7 @@ components:
       type: object
       required:
         - name
+        - completed
       properties:
         id:
           type: string
