--- a/service-product/package.json
+++ b/service-product/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@hono/node-server": "^1.14.2",
     "hono": "^4.7.10",
-    "openapi-fetch": "^0.14.0"
+    "openapi-fetch": "^0.14.0",
+    "openapi-ts-router": "^0.2.14",
+    "validation-adapters": "^0.0.25",
+    "zod": "^3.25.42"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
